# fil-hello-world-actor-as

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  asconfig.json  jest.config.ts  package.json  release-final.wasm
.github/workflows/: main.yaml  release.yaml
assembly/: index.ts  state.ts  tsconfig.json
assembly/env/: env.ts  index.ts  types.ts
assembly/sdk/: errors.ts  index.ts  ipld.ts  message.ts  vm.ts
assembly/sdk/env/: constants.ts  env.ts  errors.ts  index.ts  types.ts
assembly/sdk/env/sys/: actor.ts  ipld.ts
assembly/sdk/helpers/: ipld.ts  self.ts
assembly/sdk/utils/cid/: multihash.ts
assembly/sdk/utils/state/: json.ts
assembly/sdk/wrappers/: errors.ts  ipld.ts  message.ts  self.ts
benchmarking/: Cargo.toml  Makefile  rust-hello-world-actor.wasm
benchmarking/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/api/: index.test.ts  tsconfig.json
tests/browser/: .env.example  package.json  tsconfig.json
tests/browser/components/: Account.tsx  ChooseFile.tsx  Create.tsx  Hello.tsx  Install.tsx
tests/browser/lib/: base64.ts  index.ts  types.ts
tests/browser/pages/: index.tsx
tests/browser/pages/api/: create.ts  install.ts  say_hello.ts
tests/local-vm/: Cargo.toml
tests/local-vm/src/: main.rs
tests/rpc/: index.test.ts
