[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_blockstore = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", commit = "c4f4acbe4f028a341f164d149e36d8ef5cb5617d" }
fvm_integration_tests = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", commit = "c4f4acbe4f028a341f164d149e36d8ef5cb5617d" }
fvm_shared = { version = "0.6.1", git = "https://github.com/filecoin-project/ref-fvm", commit = "c4f4acbe4f028a341f164d149e36d8ef5cb5617d" }
fvm_ipld_encoding = "0.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"