[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fvm_ipld_blockstore = { version = "0.1.0", path = "../../ref-fvm/ipld/blockstore" }
#fvm_integration_tests = { version = "0.1.0", path = "../../ref-fvm/testing/integration" }
#fvm_shared = { version = "0.6.1", path = "../../ref-fvm/shared" }
fvm_ipld_blockstore = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_integration_tests = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_shared = { version = "0.6.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_ipld_encoding = "0.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
wabt = "0.10.0"