[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fvm_ipld_blockstore = { version = "0.1.1", path = "../../ref-fvm/ipld/blockstore" }
#fvm_integration_tests = { version = "0.1.0", path = "../../ref-fvm/testing/integration" }
#fvm_shared = { version = "0.7.0", path = "../../ref-fvm/shared" }
#fvm = { version = "1.0.0-rc.1", path = "../../ref-fvm/fvm" }
#fvm_ipld_encoding = { version = "0.2", path = "../../ref-fvm/ipld/encoding" }

fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_integration_tests = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_shared = { version = "0.7.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm = { version = "1.0.0-rc.2", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2", default-features = false }
fvm_ipld_encoding = { version = "0.2.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }

#fil_actor_init = { version = "8.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", branch = "experimental/fvm-m2" }

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
wabt = "0.10.0"
hex = "0.4.3"


[patch.crates-io]
fvm_ipld_encoding = { version = "0.2.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_ipld_hamt = { version = "0.5.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_ipld_amt = { version = "0.4.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_shared = { version = "0.7.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm", branch = "experimental/fvm-m2" }
